ATLAS-1972: Try to fix build